# TokenCat

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/tokencat/: __init__.py  __main__.py  cli.py
src/tokencat/core/: __init__.py  aggregate.py  filters.py  models.py  paths.py  presentation.py  pricing.py  privacy.py  render.py  serialize.py  time.py  updates.py
src/tokencat/pricing/: __init__.py  catalog.json
src/tokencat/providers/: __init__.py  base.py  claude.py  codex.py  copilot.py  gemini.py  opencode.py  registry.py
tests/: conftest.py  test_cli.py  test_dashboard_pricing.py  test_providers.py
tests/golden/: dashboard_monthly.txt  dashboard_no_price.txt  dashboard_priced.txt  dashboard_priced_update.txt  dashboard_unknown.txt  dashboard_weekly.txt
