[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokencat"
version = "0.1.0"
description = "Local-first, read-only AI coding agent token and usage inspector."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "xiaoran" }
]
dependencies = [
  "rich>=13.7.0,<14",
  "typer>=0.12.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9",
]

[project.scripts]
tokencat = "tokencat.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tokencat = ["pricing/catalog.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
