[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokencat"
version = "0.1.0"
description = "Local-first, read-only AI coding agent token and usage inspector."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "xiaoran" }
]
keywords = [
  "cli",
  "codex",
  "gemini",
  "tokens",
  "usage",
  "developer-tools",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Utilities",
]
dependencies = [
  "rich>=13.7.0,<14",
  "typer>=0.12.0,<1",
]

[project.urls]
Homepage = "https://github.com/xiaoran007/TokenCat"
Repository = "https://github.com/xiaoran007/TokenCat"
Issues = "https://github.com/xiaoran007/TokenCat/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9",
]
release = [
  "setuptools>=68",
  "wheel",
  "build>=1.2.2,<2",
  "twine>=5.1.1,<6",
]

[project.scripts]
tokencat = "tokencat.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tokencat = ["pricing/catalog.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
